2004-04-19  Christian Rose  <menthos@menthos.com>

	* AUTHORS: I'm not the I18N maintainer of gnomemeeting.

2004-04-18  Damien Sandras  <dsandras@gnome.org>

        * lib/contacts/gm_contacts-eds.cpp: Added body for
        gm_addressbook_new, gm_addressbook_delete and
        gnomemeeting_addressbook_modify_contact to be able
        to edit contact details.

        * lib/contacts/gm_contacts.h: Added comments to GmAddressbook.
        
        * src/addressbook_window.cpp: Added code to update an Addressbook
        content, and to modify a contact.

2004-04-18  Julien Puydt <julien.puydt@laposte.net>

	* src/sound_handling.cpp: removed unused local variable.

2004-04-18  Julien Puydt <julien.puydt@laposte.net>

	* src/calls_history_window.h: removed confusing comment.
	* src/tools.cpp: removed unneeded warning.

2004-04-17  Damien Sandras  <dsandras@gnome.org>

        * src/addressbook_window.cpp: More work to be able to add users.
        
        * src/gnomemeeting.cpp, src/gnomemeeting.h: Added convenience
        function to get the GmAddressbookWindow.

2004-04-17 Julien Puydt <julien.puydt@laposte.net>

	* src/callbacks.cpp, src/druid.cpp, src/ils.cpp, src/ldap_window.cpp,
	src/menu.cpp, src/misc.cpp, src/pref_window.cpp, src/tools.cpp,
	src/tray.cpp: changed some if () return; to g_return_if_fail();

2004-04-17 Julien Puydt <julien.puydt@laposte.net>

	* src/calls_history_window.*: moved the internal representation
	from the .h to the .cpp.

2004-04-17 Julien Puydt <julien.puydt@laposte.net>

	* src/calls_history_window.cpp, src/ldap_window.cpp,
	src/main_window.cpp: Made drag'n drop use the GmContact type.
	
2004-04-17  Damien Sandras  <dsandras@gnome.org>

        * lib/contacts/gm_contacts-eds.cpp, 
        lib/contacts/gm_contacts.h: Cosmetic changes + bugfix suggested
        by Julien.

2004-04-16  Damien Sandras  <dsandras@gnome.org>

        * lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts.h:
        Updated API.
