@@ -1,3 +1,11 @@
+2004-04-19  Julien Puydt <julien.puydt@laposte.net>
+
+	* lib/contacts/gm_contacts-gm_conf.cpp: basic implementation of a
+	gnome-free contacts' backend.
+	* lib/contacts/Makefile.am: modified to choose which implementation
+	of the contacts' backend to compile (depending DISABLE_GNOME).
+	* src/callbacks.cpp: modified my email to the current one.
+	
 2004-04-19  Christian Rose  <menthos@menthos.com>
 
 	* AUTHORS: I'm not the I18N maintainer of gnomemeeting.
